# burgersequation

./: .nfs0000000001b000c10001c753  .nfs0000000001b000c10001d56f  .nfs0000000001b002cc000195ed  .nfs0000000001b00343000195ee  .nfs0000000001b003500001bba0  .nfs0000000001b003520001d594  Burgers.cpp  Burgers.h  BurgersProg  CMakeLists.txt  Makefile  Model.cpp  Model.h  README.md  burgers.cpp  main.cpp  myProg
